syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option  go_package = "github.com/ipv02/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum UserRole {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateUserRequest {
  string name = 1 [(validate.rules).string = {min_len: 3, max_len: 10}];
  string email = 2 [(validate.rules).string = {email: true}];
  string password = 3 [(validate.rules).string = {min_len: 5, max_len: 20}];
  string password_confirm = 4 [(validate.rules).string = {min_len: 5, max_len: 20}];
  UserRole role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  UserRole role = 4;
}

message DeleteUserRequest {
  int64 id = 1;
}